Ajout photo pour nav + toggle du menu

--- a/index.html
+++ b/index.html
@@ -10,9 +10,66 @@
     <title>Portfolio_Jérôme</title>
 </head>
 <body>
+
+    <!-- Bouton gauche menu mobile -->
+    <div class="btn-rond-menu">
+        <div class="cont-ligne">
+            <div class="ligne-unique"></div>
+        </div>
+    </div>
+    
     <!-- Navigation verticale -->
+
     <nav class="nav-gauche">
-        
+
+        <div class="blocs-menu">
+            <div class="cercle-portrait">
+                <img src="ressources/profil.jpg" alt="portrait">
+            </div>
+        </div>
+        <div class="blocs-menu">
+            <span class="nav-menu-item">
+                <a href="#">
+                   Accueil
+                </a>
+            </span>
+        </div>
+        <div class="blocs-menu">
+            <span class="nav-menu-item">
+                <a href="#">
+                    Présentation 
+                </a>
+            </span>
+        </div>
+        <div class="blocs-menu">
+            <span class="nav-menu-item">
+                <a href="#">
+                    Portfolio
+                </a>
+            </span>
+        </div>
+        <div class="blocs-menu">
+            <span class="nav-menu-item">
+                <a href="#">
+                    Compétences
+                </a>
+            </span>
+        </div>
+        <div class="blocs-menu">
+            <span class="nav-menu-item">
+                <a href="#">
+                    Contact
+                </a>
+            </span>
+        </div>
+
+        <div class="blocs-menu">
+            <div class="logo-cercle">
+                <img src="ressources/contact.svg" alt="logo contact">
+            </div>
+        </div>
+
+
     </nav>
 
 
