--- a/index.html
+++ b/index.html
@@ -71,7 +71,37 @@
 
 
     </nav>
+    <!-- Accueil -->
+    <section class="accueil" id="accueil">
+        <h1>Bienvenue sur mon Portfolio</h1>
+        <p class="txt-animation">Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+        <a href="#" class="btn-acc btnacc1">Portfolio</a>
+        <a href="#" class="btn-acc btnacc2">Expériences</a>
+        
+        <div class="medias">
+            <a href="https://github.com" target="blank">
+                <div class="media media1">
+                    <img src="ressources/github.svg" alt="github icone" class="icone-medias">
+                </div>
+            </a>
+            <a href="https://linkedin.com" target="blank">
+                <div class="media media2">
+                    <img src="ressources/linkedin.svg" alt="linkedin icone" class="icone-medias">
+                </div>
+            </a>
+            <a href="https//tweeter.com" target="blank">
+                <div class="media media3">
+                    <img src="ressources/twitter.svg" alt="twitter icone" class="icone-medias">
+                </div>
+            </a>
+        </div>
+<a href="#">
+    <div class="btn-rond">
+        <img src="ressources/arrowDown.svg" alt="logo fleche bas" class="logo-btn-rond-acc">
+    </div>
+</a>
 
+    </section>
 
 
     <script src="app.js"></script>
