Animation texte accueil typewriter

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- Accueil -->
     <section class="accueil" id="accueil">
         <h1>Bienvenue sur mon Portfolio</h1>
-        <p class="txt-animation">Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+        <p class="txt-animation"></p>
         <a href="#" class="btn-acc btnacc1">Portfolio</a>
         <a href="#" class="btn-acc btnacc2">Expériences</a>
         
@@ -95,15 +95,44 @@
                 </div>
             </a>
         </div>
-<a href="#">
-    <div class="btn-rond">
-        <img src="ressources/arrowDown.svg" alt="logo fleche bas" class="logo-btn-rond-acc">
-    </div>
-</a>
+        <a href="#">
+            <div class="btn-rond">
+                <img src="ressources/arrowDown.svg" alt="logo fleche bas" class="logo-btn-rond-acc">
+            </div>
+        </a>
 
     </section>
 
+<!-- Présentation -->
 
+    <section class="presentation" id="pres">
+
+        <h2 class="titre-pres">En bref</h2>
+
+        <div class="container-presentation">
+
+            <div class="fond-forme"></div>
+
+            <div class="pres-gauche">
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+                <hr>
+            </div>
+
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
