Création section présentation, HTML,CSS et media Queries

--- a/index.html
+++ b/index.html
@@ -107,17 +107,53 @@
 
     <section class="presentation" id="pres">
 
-        <h2 class="titre-pres">En bref</h2>
+        <h2 class="titre-pres">Ma reconversion professionnelle</h2>
 
         <div class="container-presentation">
 
             <div class="fond-forme"></div>
 
-            <div class="pres-gauche">
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-                <hr>
-            </div>
-
+                <div class="pres-gauche">
+                    <h3>En bref !</h3>
+                    <hr>
+                    <p>Après une riche expérience de 15 ans en bureau
+                        d’études automobiles, j’ai pris la décision de changer
+                        de cap et de m’épanouir dans un nouveau domaine.
+                        Durant ma carrière, j'ai particulièrement pris plaisir à
+                        créer des outils pour les autres, methode de réparation, outils Excel, méthode de fabrication ...<br>
+                        Démontrant ainsi ma capacité à
+                        développer des solutions pratiques et efficaces pour
+                        les autres. Passionné par le numérique et les
+                        nouvelles technologies. Le développement Web s’est
+                        imposé à moi comme une évidence. Je suis désormais
+                        plus que jamais prêt à m'investir dans cette nouvelle
+                        carrière !</p>
+                </div>
+            
+                <div class="pres-doite">
+                    <ul class="liste-presentation">
+                        <li class="item-liste i1">
+                            <span class="chiffre-style">1.</span>
+                            <p class="txt-liste">Développeur Front-end</p>
+                        </li>
+                        <li class="item-liste i2">
+                            <span class="chiffre-style">2.</span>
+                            <p class="txt-liste">Développeur Back-end</p>
+                        </li>
+                        <li class="item-liste i3">
+                            <span class="chiffre-style">3.</span>
+                            <p class="txt-liste">Gestion de projet</p>
+                        </li>
+                        <li class="item-liste i4">
+                            <span class="chiffre-style">4.</span>
+                            <p class="txt-liste">SEO</p>
+                        </li>
+                        <li class="item-liste i5">
+                            <span class="chiffre-style">5.</span>
+                            <p class="txt-liste">UX Design</p>
+                        </li>
+                    </ul>
+                </div>
         </div>
     </section>
 
