Début de la section portfolio

--- a/index.html
+++ b/index.html
@@ -152,7 +152,102 @@
         </div>
     </section>
 
+    <!-- Portfolio -->
 
+    <section class="portfolio" id="port">
+
+        <h2 class="titre-port">Mon portfolio</h2>
+
+        <div class="cont-portfolio">
+
+            <div class="item vague1">
+                <div class="cont-img-port">
+                    <img src="ressources/clicknfun.png" alt="img portfolio">
+                </div>
+                <h3>Click-n-Fun</h3>
+                <p>Projet de groupe dans le cadre de la formation,  organisation de sorties. Réalisé avec Symfony</p>
+                <a href="https://github.com/MalvinaDev/Click-n-Fun/tree/jerome"class="btn-projets">Découvrez le projet</a>
+            </div>
+
+            <div class="item vague1">
+                <div class="cont-img-port">
+                    <img src="ressources/console.jpg" alt="img portfolio">
+                </div>
+                <h3>Mon fabuleux projet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
+                <a href="#"class="btn-projets">Découvrez le projet</a>
+            </div>
+
+            <div class="item vague1">
+                <div class="cont-img-port">
+                    <img src="ressources/animcss.jpg" alt="img portfolio">
+                </div>
+                <h3>Mon fabuleux projet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
+                <a href="#"class="btn-projets">Découvrez le projet</a>
+            </div>
+
+            <div class="item vague2">
+                <div class="cont-img-port">
+                    <img src="ressources/bootstrapsite.jpg" alt="img portfolio">
+                </div>
+                <h3>Mon fabuleux projet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
+                <a href="#"class="btn-projets">Découvrez le projet</a>
+            </div>
+
+            <div class="item vague2">
+                <div class="cont-img-port">
+                    <img src="ressources/flex.jpg" alt="img portfolio">
+                </div>
+                <h3>Mon fabuleux projet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
+                <a href="#"class="btn-projets">Découvrez le projet</a>
+            </div>
+
+            <div class="item vague2">
+                <div class="cont-img-port">
+                    <img src="ressources/d3.jpg" alt="img portfolio">
+                </div>
+                <h3>Mon fabuleux projet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
+                <a href="#"class="btn-projets">Découvrez le projet</a>
+            </div>
+
+            <div class="item vague3">
+                <div class="cont-img-port">
+                    <img src="ressources/Menus.jpg" alt="img portfolio">
+                </div>
+                <h3>Mon fabuleux projet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
+                <a href="#"class="btn-projets">Découvrez le projet</a>
+            </div>
+
+            <div class="item vague3">
+                <div class="cont-img-port">
+                    <img src="ressources/projetsCars.jpg" alt="img portfolio">
+                </div>
+                <h3>Mon fabuleux projet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
+                <a href="#"class="btn-projets">Découvrez le projet</a>
+            </div>
+
+            <div class="item vague3">
+                <div class="cont-img-port">
+                    <img src="ressources/form.jpg" alt="img portfolio">
+                </div>
+                <h3>Mon fabuleux projet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
+                <a href="#"class="btn-projets">Découvrez le projet</a>
+            </div>
+
+
+        </div>
+
+
+
+
+    </section>
 
 
 
