--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <a href="#" class="btn-acc btnacc2">Expériences</a>
         
         <div class="medias">
-            <a href="https://github.com" target="blank">
+            <a href="https://github.com/JeromeArnoult" target="blank">
                 <div class="media media1">
                     <img src="ressources/github.svg" alt="github icone" class="icone-medias">
                 </div>
             </a>
-            <a href="https://linkedin.com" target="blank">
+            <a href="https://www.linkedin.com/in/j%C3%A9r%C3%B4me-arnoult/" target="blank">
                 <div class="media media2">
                     <img src="ressources/linkedin.svg" alt="linkedin icone" class="icone-medias">
                 </div>
