Création section compétences HTML/CSS

--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
             </div>
         </div>
 
-
     </nav>
     <!-- Accueil -->
     <section class="accueil" id="accueil">
@@ -173,7 +172,7 @@
                 <div class="cont-img-port">
                     <img src="ressources/console.jpg" alt="img portfolio">
                 </div>
-                <h3>Mon fabuleux projet</h3>
+                <h3>Bucket-list</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
                 <a href="#"class="btn-projets">Découvrez le projet</a>
             </div>
@@ -182,8 +181,8 @@
                 <div class="cont-img-port">
                     <img src="ressources/animcss.jpg" alt="img portfolio">
                 </div>
-                <h3>Mon fabuleux projet</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
+                <h3>Messagerie</h3>
+                <p>Projet Angular</p>
                 <a href="#"class="btn-projets">Découvrez le projet</a>
             </div>
 
@@ -191,8 +190,8 @@
                 <div class="cont-img-port">
                     <img src="ressources/bootstrapsite.jpg" alt="img portfolio">
                 </div>
-                <h3>Mon fabuleux projet</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
+                <h3>ENI-Enchères</h3>
+                <p>Projet de groupe dans le cadre de la formation, Java/SQLServer</p>
                 <a href="#"class="btn-projets">Découvrez le projet</a>
             </div>
 
@@ -200,8 +199,8 @@
                 <div class="cont-img-port">
                     <img src="ressources/flex.jpg" alt="img portfolio">
                 </div>
-                <h3>Mon fabuleux projet</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
+                <h3>Office du tourisme de Pont-L'Abbé</h3>
+                <p>Projet vanillia HTML/CSS/JavaScript</p>
                 <a href="#"class="btn-projets">Découvrez le projet</a>
             </div>
 
@@ -209,16 +208,16 @@
                 <div class="cont-img-port">
                     <img src="ressources/d3.jpg" alt="img portfolio">
                 </div>
-                <h3>Mon fabuleux projet</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
+                <h3>Agence immobilière</h3>
+                <p>Projet fait avec le frameWork Bulma</p>
                 <a href="#"class="btn-projets">Découvrez le projet</a>
             </div>
 
-            <div class="item vague3">
+            <!-- <div class="item vague3">
                 <div class="cont-img-port">
                     <img src="ressources/Menus.jpg" alt="img portfolio">
                 </div>
-                <h3>Mon fabuleux projet</h3>
+                <h3>Mon fabuleux projet 7</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
                 <a href="#"class="btn-projets">Découvrez le projet</a>
             </div>
@@ -227,7 +226,7 @@
                 <div class="cont-img-port">
                     <img src="ressources/projetsCars.jpg" alt="img portfolio">
                 </div>
-                <h3>Mon fabuleux projet</h3>
+                <h3>Mon fabuleux projet 8</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
                 <a href="#"class="btn-projets">Découvrez le projet</a>
             </div>
@@ -236,16 +235,59 @@
                 <div class="cont-img-port">
                     <img src="ressources/form.jpg" alt="img portfolio">
                 </div>
-                <h3>Mon fabuleux projet</h3>
+                <h3>Mon fabuleux projet 9</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
                 <a href="#"class="btn-projets">Découvrez le projet</a>
+            </div> -->
+        </div>
+    </section>
+
+    <!-- Compétences -->
+
+    <section class="section-range" id="range">
+
+        <h class="titre-exp">Mes compétences</h>
+
+        <div class="grille-skill">
+
+            <div class="range-cont">
+                <p class="label-skill">JavaScript</p>
+                <p class="number-skill">60%</p>
+                <div class="barre-skill b1"></div>
+                <div class="barre-grises"></div>
+            </div>
+            <div class="range-cont">
+                <p class="label-skill">SEO</p>
+                <p class="number-skill">70%</p>
+                <div class="barre-skill b2"></div>
+                <div class="barre-grises"></div>
+            </div>
+            <div class="range-cont">
+                <p class="label-skill">UI/UX</p>
+                <p class="number-skill">60%</p>
+                <div class="barre-skill b3"></div>
+                <div class="barre-grises"></div>
+            </div>
+            <div class="range-cont">
+                <p class="label-skill">Symfony</p>
+                <p class="number-skill">60%</p>
+                <div class="barre-skill b4"></div>
+                <div class="barre-grises"></div>
+            </div>
+            <div class="range-cont">
+                <p class="label-skill">Gestion projet</p>
+                <p class="number-skill">70%</p>
+                <div class="barre-skill b5"></div>
+                <div class="barre-grises"></div>
+            </div>
+            <div class="range-cont">
+                <p class="label-skill">PHP</p>
+                <p class="number-skill">60%</p>
+                <div class="barre-skill b6"></div>
+                <div class="barre-grises"></div>
             </div>
 
-
         </div>
-
-
-
 
     </section>
 
