--- a/index.html
+++ b/index.html
@@ -29,29 +29,36 @@
         </div>
         <div class="blocs-menu">
             <span class="nav-menu-item">
-                <a href="#">
+                <a href="#accueil">
                    Accueil
                 </a>
             </span>
         </div>
         <div class="blocs-menu">
             <span class="nav-menu-item">
-                <a href="#">
+                <a href="#pres">
                     Présentation 
                 </a>
             </span>
         </div>
         <div class="blocs-menu">
             <span class="nav-menu-item">
-                <a href="#">
+                <a href="#port">
                     Portfolio
                 </a>
             </span>
         </div>
         <div class="blocs-menu">
             <span class="nav-menu-item">
-                <a href="#">
+                <a href="#range">
                     Compétences
+                </a>
+            </span>
+        </div>
+        <div class="blocs-menu">
+            <span class="nav-menu-item">
+                <a href="#exp">
+                    Expériences
                 </a>
             </span>
         </div>
