--- a/index.html
+++ b/index.html
@@ -395,13 +395,48 @@
                         <p class="txt-section">Pilotage banc moteur en endurance/fiabilité, suivi et analyse des données d’essais, rédaction des comptes rendu d'essai, Remplacement pièces et diagnostic.</p>
                     </div>
                 </div>
-
             </div>
+        </div>
+    </section>
+    <!-- Parallax -->
 
+    <div class="section-parallax">
+        <p class="txt-par">RIGUEUR</p>
+        <p class="txt-par">CRÉATIVITÉ </p>
+        <p class="txt-par">CURIOSITÉ </p>
+    </div>
+
+    <!-- Contact -->
+
+    <section class="section-contact" id="contact">
+
+        <h2><strong>Prenons</strong> contact</h2>
+
+        <div class="container-form">
+            <form action="" class="form-bloc">
+
+                <div class="form-groupe">
+                    <label for="prenom">Prénom</label>
+                    <input type="text" id="prenom">
+                </div>
+                <div class="form-groupe">
+                    <label for="nom">Nom</label>
+                    <input type="text" id="nom">
+                </div>
+                <div class="form-groupe">
+                <textarea  id="txt" placeholder="Votre message"></textarea>
+                </div>
+                <div class="form-groupe">
+                    <input type="submit" value="ENVOYER" class="button-sub">
+                </div>
+            </form>
         </div>
 
-    </section>
 
+    </section>
+    <footer>
+        Tout Droits réservés &copy;
+    </footer>
 
 
 
