Liens de nav ok

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="blocs-menu">
             <span class="nav-menu-item">
-                <a href="#">
+                <a href="#contact">
                     Contact
                 </a>
             </span>
@@ -81,8 +81,8 @@
     <section class="accueil" id="accueil">
         <h1>Bienvenue sur mon Portfolio</h1>
         <p class="txt-animation"></p>
-        <a href="#" class="btn-acc btnacc1">Portfolio</a>
-        <a href="#" class="btn-acc btnacc2">Expériences</a>
+        <a href="#port" class="btn-acc btnacc1">Portfolio</a>
+        <a href="#exp" class="btn-acc btnacc2">Expériences</a>
         
         <div class="medias">
             <a href="https://github.com/JeromeArnoult" target="blank">
@@ -96,7 +96,7 @@
                 </div>
             </a>
         </div>
-        <a href="#">
+        <a href="#pres">
             <div class="btn-rond">
                 <img src="ressources/arrowDown.svg" alt="logo fleche bas" class="logo-btn-rond-acc">
             </div>
