Modification des images pour optimisation du site

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <!-- Bouton gauche menu mobile -->
+
     <div class="btn-rond-menu">
         <div class="cont-ligne">
             <div class="ligne-unique"></div>
@@ -24,7 +25,7 @@
 
         <div class="blocs-menu">
             <div class="cercle-portrait">
-                <img src="ressources/profil.jpg" alt="portrait">
+                <img src="ressources/profil2.jpg" alt="portrait">
             </div>
         </div>
         <div class="blocs-menu">
@@ -77,7 +78,9 @@
         </div>
 
     </nav>
+
     <!-- Accueil -->
+
     <section class="accueil" id="accueil">
         <h1>Bienvenue sur mon Portfolio</h1>
         <p class="txt-animation"></p>
@@ -177,7 +180,7 @@
 
             <div class="item vague1">
                 <div class="cont-img-port">
-                    <img src="ressources/console.jpg" alt="img portfolio">
+                    <img src="ressources/bucket_list.png" alt="img portfolio">
                 </div>
                 <h3>Bucket-list</h3>
                 <p>Projet symfony</p>
@@ -186,7 +189,7 @@
 
             <div class="item vague1">
                 <div class="cont-img-port">
-                    <img src="ressources/animcss.jpg" alt="img portfolio">
+                    <img src="ressources/messagerie.png" alt="img portfolio">
                 </div>
                 <h3>Messagerie</h3>
                 <p>Projet Angular</p>
@@ -195,7 +198,7 @@
 
             <div class="item vague2">
                 <div class="cont-img-port">
-                    <img src="ressources/bootstrapsite.jpg" alt="img portfolio">
+                    <img src="ressources/EncheresENI.png" alt="img portfolio">
                 </div>
                 <h3>ENI-Enchères</h3>
                 <p>Projet de groupe dans le cadre de la formation, Java/SQLServer</p>
@@ -204,7 +207,7 @@
 
             <div class="item vague2">
                 <div class="cont-img-port">
-                    <img src="ressources/flex.jpg" alt="img portfolio">
+                    <img src="ressources/pontlabbe.png" alt="img portfolio">
                 </div>
                 <h3>Office du tourisme de Pont-L'Abbé</h3>
                 <p>Projet vanillia HTML/CSS/JavaScript</p>
@@ -213,7 +216,7 @@
 
             <div class="item vague2">
                 <div class="cont-img-port">
-                    <img src="ressources/d3.jpg" alt="img portfolio">
+                    <img src="ressources/bulma.png" alt="img portfolio">
                 </div>
                 <h3>Agence immobilière</h3>
                 <p>Projet fait avec le frameWork Bulma</p>
@@ -398,6 +401,7 @@
             </div>
         </div>
     </section>
+
     <!-- Parallax -->
 
     <div class="section-parallax">
@@ -432,19 +436,10 @@
             </form>
         </div>
 
-
     </section>
     <footer>
         Tout Droits réservés &copy;
     </footer>
-
-
-
-
-
-
-
-
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="app.js"></script>
 </body>
