reduction format des images

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
             <div class="item vague2">
                 <div class="cont-img-port">
-                    <img src="ressources/pontlabbe.png" alt="img portfolio">
+                    <img src="ressources/pontlabbe2.png" alt="img portfolio">
                 </div>
                 <h3>Office du tourisme de Pont-L'Abbé</h3>
                 <p>Projet vanillia HTML/CSS/JavaScript</p>
@@ -217,7 +217,7 @@
 
             <div class="item vague2">
                 <div class="cont-img-port">
-                    <img src="ressources/bulma.png" alt="img portfolio">
+                    <img src="ressources/bulma2.png" alt="img portfolio">
                 </div>
                 <h3>Agence immobilière</h3>
                 <p>Projet fait avec le frameWork Bulma</p>
