Resize img en avif

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="blocs-menu">
             <div class="cercle-portrait">
-                <img src="ressources/profil2.jpg" alt="portrait">
+                <img src="ressources/profil2.avif" alt="portrait">
             </div>
         </div>
         <div class="blocs-menu">
@@ -172,7 +172,7 @@
 
             <div class="item vague1">
                 <div class="cont-img-port">
-                    <img src="ressources/clicknfun.png" alt="img portfolio">
+                    <img src="ressources/clicknfun.avif" alt="img portfolio">
                 </div>
                 <h3>Click-n-Fun</h3>
                 <p>Projet de groupe dans le cadre de la formation,  organisation de sorties. Réalisé avec Symfony</p>
@@ -190,7 +190,7 @@
 
             <div class="item vague1">
                 <div class="cont-img-port">
-                    <img src="ressources/messagerie.png" alt="img portfolio">
+                    <img src="ressources/messagerie.avif" alt="img portfolio">
                 </div>
                 <h3>Messagerie</h3>
                 <p>Projet Angular</p>
@@ -208,7 +208,7 @@
 
             <div class="item vague2">
                 <div class="cont-img-port">
-                    <img src="ressources/pontlabbe2.png" alt="img portfolio">
+                    <img src="ressources/pontlabbe2.avif" alt="img portfolio">
                 </div>
                 <h3>Office du tourisme de Pont-L'Abbé</h3>
                 <p>Projet vanillia HTML/CSS/JavaScript</p>
@@ -217,7 +217,7 @@
 
             <div class="item vague2">
                 <div class="cont-img-port">
-                    <img src="ressources/bulma2.png" alt="img portfolio">
+                    <img src="ressources/bulma2.avif" alt="img portfolio">
                 </div>
                 <h3>Agence immobilière</h3>
                 <p>Projet fait avec le frameWork Bulma</p>
