Modification des liens de projet gitHub

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
     </nav>
-
+    <main>
     <!-- Accueil -->
 
     <section class="accueil" id="accueil">
@@ -100,8 +100,9 @@
                 </div>
             </a>
         </div>
-        <a href="#pres" aria-label="Dirige vers la présentation"></a>>
+        <a href="#pres" aria-label="Dirige vers la présentation" >
             <div class="btn-rond">
+                
                 <img src="ressources/arrowDown.svg" alt="logo fleche bas" class="logo-btn-rond-acc">
             </div>
         </a>
@@ -176,7 +177,7 @@
                 </div>
                 <h3>Click-n-Fun</h3>
                 <p>Projet de groupe dans le cadre de la formation,  organisation de sorties. Réalisé avec Symfony</p>
-                <a href="https://github.com/MalvinaDev/Click-n-Fun/tree/jerome"class="btn-projets">Découvrez le projet</a>
+                <a href="https://github.com/MalvinaDev/Click-n-Fun/tree/jerome" target="blank" class="btn-projets">Découvrez le projet</a>
             </div>
                 
             <div class="item vague1">
@@ -185,7 +186,7 @@
                 </div>
                 <h3>Bucket-list</h3>
                 <p>Projet symfony</p>
-                <a href="#"class="btn-projets">Découvrez le projet</a>
+                <a href="https://github.com/JeromeArnoult/Bucket-list"class="btn-projets" target="blank">Découvrez le projet</a>
             </div>
 
             <div class="item vague1">
@@ -194,62 +195,9 @@
                 </div>
                 <h3>Messagerie</h3>
                 <p>Projet Angular</p>
-                <a href="#"class="btn-projets">Découvrez le projet</a>
+                <a href="https://github.com/JeromeArnoult/tpMessagerieV2" target="blank" class="btn-projets">Découvrez le projet</a>
             </div>
 
-            <div class="item vague2">
-                <div class="cont-img-port">
-                    <img src="ressources/EncheresENI.png" alt="img portfolio">
-                </div>
-                <h3>ENI-Enchères</h3>
-                <p>Projet de groupe dans le cadre de la formation, Java/SQLServer</p>
-                <a href="#"class="btn-projets">Découvrez le projet</a>
-            </div>
-
-            <div class="item vague2">
-                <div class="cont-img-port">
-                    <img src="ressources/pontlabbe2.avif" alt="img portfolio">
-                </div>
-                <h3>Office du tourisme de Pont-L'Abbé</h3>
-                <p>Projet vanillia HTML/CSS/JavaScript</p>
-                <a href="#"class="btn-projets">Découvrez le projet</a>
-            </div>
-
-            <div class="item vague2">
-                <div class="cont-img-port">
-                    <img src="ressources/bulma2.avif" alt="img portfolio">
-                </div>
-                <h3>Agence immobilière</h3>
-                <p>Projet fait avec le frameWork Bulma</p>
-                <a href="#"class="btn-projets">Découvrez le projet</a>
-            </div>
-
-            <!-- <div class="item vague3">
-                <div class="cont-img-port">
-                    <img src="ressources/Menus.jpg" alt="img portfolio">
-                </div>
-                <h3>Mon fabuleux projet 7</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
-                <a href="#"class="btn-projets">Découvrez le projet</a>
-            </div>
-
-            <div class="item vague3">
-                <div class="cont-img-port">
-                    <img src="ressources/projetsCars.jpg" alt="img portfolio">
-                </div>
-                <h3>Mon fabuleux projet 8</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
-                <a href="#"class="btn-projets">Découvrez le projet</a>
-            </div>
-
-            <div class="item vague3">
-                <div class="cont-img-port">
-                    <img src="ressources/form.jpg" alt="img portfolio">
-                </div>
-                <h3>Mon fabuleux projet 9</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam?</p>
-                <a href="#"class="btn-projets">Découvrez le projet</a>
-            </div> -->
         </div>
     </section>
 
@@ -438,6 +386,7 @@
         </div>
 
     </section>
+</main>
     <footer>
         Tout Droits réservés &copy;
     </footer>
