--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name ="description" content="Portfolio de Jérôme Arnoult, présentation expériences">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap" rel="stylesheet">
     <title>Portfolio_Jérôme</title>
 </head>
 <body>
@@ -80,7 +80,7 @@
 
     </nav>
     <main>
-    <!-- Accueil -->
+    <!--------------------------------------------------------------- Accueil ------------------------------------------------------>
 
     <section class="accueil" id="accueil">
         <h1>Bienvenue sur mon Portfolio</h1>
@@ -109,7 +109,7 @@
 
     </section>
 
-<!-- Présentation -->
+<!--------------------------------------------------------- Présentation --------------------------------------------------------->
 
     <section class="presentation" id="pres">
 
@@ -163,7 +163,7 @@
         </div>
     </section>
 
-    <!-- Portfolio -->
+    <!-------------------------------------------------- Portfolio -------------------------------------------------------->
 
     <section class="portfolio" id="port">
 
@@ -201,7 +201,7 @@
         </div>
     </section>
 
-    <!-- Compétences -->
+    <!------------------------------------------------------- Compétences ---------------------------------------------------------->
 
     <section class="section-range" id="range">
 
@@ -250,7 +250,7 @@
 
     </section>
 
-    <!-- Section Expériences -->
+    <!---------------------------------------------------- Expériences ------------------------------------------------------------->
        
     <section class="travail-exp" id="exp">
 
@@ -351,7 +351,7 @@
         </div>
     </section>
 
-    <!-- Parallax -->
+    <!---------------------------------------------------------- Parallax---------------------------------------------------------->
 
     <div class="section-parallax">
         <p class="txt-par">RIGUEUR</p>
@@ -359,11 +359,11 @@
         <p class="txt-par">CURIOSITÉ </p>
     </div>
 
-    <!-- Contact -->
+    <!---------------------------------------------------------- Contact ---------------------------------------------------------->
 
     <section class="section-contact" id="contact">
 
-        <h2><strong>Prenons</strong> contact</h2>
+        <h2><span>Prenons</span> contact</h2>
 
         <div class="container-form">
             <form action="" class="form-bloc">
@@ -388,7 +388,7 @@
     </section>
 </main>
     <footer>
-        Tout Droits réservés &copy;
+        &copy; - Arnoult Jérôme - Tous Droits réservés 
     </footer>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="app.js"></script>
