--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap" rel="stylesheet">
     <title>Portfolio_Jérôme</title>
 </head>
+<!-- TODO : Liens pour la partie portfolio -->
+<!-- TODO : templateBack -->
 <body>
 
     <!-- Bouton gauche menu mobile -->
@@ -83,33 +85,39 @@
     <!--------------------------------------------------------------- Accueil ------------------------------------------------------>
 
     <section class="accueil" id="accueil">
+
         <h1>Bienvenue sur mon Portfolio</h1>
+
         <p class="txt-animation"></p>
+
         <a href="#port" class="btn-acc btnacc1">Portfolio</a>
         <a href="#exp" class="btn-acc btnacc2">Expériences</a>
         
         <div class="medias">
+
             <a href="https://github.com/JeromeArnoult" target="blank">
                 <div class="media media1">
                     <img src="ressources/github.svg" alt="github icone" class="icone-medias">
                 </div>
             </a>
+
             <a href="https://www.linkedin.com/in/j%C3%A9r%C3%B4me-arnoult/" target="blank">
                 <div class="media media2">
                     <img src="ressources/linkedin.svg" alt="linkedin icone" class="icone-medias">
                 </div>
             </a>
+
         </div>
+        <!-- Btn "Pulse" -->
         <a href="#pres" aria-label="Dirige vers la présentation" >
             <div class="btn-rond">
-                
                 <img src="ressources/arrowDown.svg" alt="logo fleche bas" class="logo-btn-rond-acc">
             </div>
         </a>
 
     </section>
 
-<!--------------------------------------------------------- Présentation --------------------------------------------------------->
+    <!--------------------------------------------------------- Présentation --------------------------------------------------------->
 
     <section class="presentation" id="pres">
 
@@ -390,6 +398,7 @@
     <footer>
         &copy; - Arnoult Jérôme - Tous Droits réservés 
     </footer>
+    <!-- librairie TypeWriter -->
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="app.js"></script>
 </body>
