Modification lien git

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     </nav>
     <main>
-    <!--------------------------------------------------------------- Accueil ------------------------------------------------------>
+    <!--------------------------------------------------- Accueil ------------------------------------------------------>
 
     <section class="accueil" id="accueil">
 
@@ -117,7 +117,7 @@
 
     </section>
 
-    <!--------------------------------------------------------- Présentation --------------------------------------------------------->
+    <!---------------------------------------- Présentation --------------------------------------------------------->
 
     <section class="presentation" id="pres">
 
@@ -185,7 +185,7 @@
                 </div>
                 <h3>Click-n-Fun</h3>
                 <p>Projet de groupe dans le cadre de la formation,  organisation de sorties. Réalisé avec Symfony</p>
-                <a href="https://github.com/MalvinaDev/Click-n-Fun/tree/jerome" target="blank" class="btn-projets">Découvrez le projet</a>
+                <a href="#" class="btn-projets">Découvrez le projet</a>
             </div>
                 
             <div class="item vague1">
@@ -209,7 +209,7 @@
         </div>
     </section>
 
-    <!------------------------------------------------------- Compétences ---------------------------------------------------------->
+    <!----------------------------------- Compétences -------------------------------------------------->
 
     <section class="section-range" id="range">
 
@@ -258,7 +258,7 @@
 
     </section>
 
-    <!---------------------------------------------------- Expériences ------------------------------------------------------------->
+    <!--------------------------------------- Expériences --------------------------------------------------------->
        
     <section class="travail-exp" id="exp">
 
