Ajout lien expérience

--- a/index.html
+++ b/index.html
@@ -268,28 +268,28 @@
               
             <div class="barre-verticale">
                 <div class="boule-ico">
-                    <img src="ressources/eni-group-home.png" alt="icone ENI">
+                    <a href="https://www.eni-ecole.fr/ecole/campus-en-ligne/" target="_blank"><img src="ressources/eni-group-home.png" alt="icone ENI"></a>
                 </div>
                 <div class="boule-ico">
-                    <img src="ressources/tecalimite.png" alt="icone tecalemit">
+                    <a href="https://www.tecalemit.com/en/" target="_blank"><img src="ressources/tecalimite.png" alt="icone tecalemit"></a>
                 </div>
                 <div class="boule-ico">
-                    <img src="ressources/groupeAuto.png" alt="icone GroupAuto">
+                    <a href="https://distributeur.groupauto.fr/fr" target="_blank"><img src="ressources/groupeAuto.png" alt="icone GroupAuto"></a>
                 </div>
                 <div class="boule-ico">
-                    <img src="ressources/bertrandt.png" alt="icone bertrandt">
+                    <a href="https://www.bertrandt.com/" target="_blank"><img src="ressources/bertrandt.png" alt="icone bertrandt"></a>
                 </div>
                 <div class="boule-ico">
-                    <img src="ressources/nbtech.png" alt="icone nbtech">
+                    <a href="https://www.nbtech.fr/v1/" target="_blank"><img src="ressources/nbtech.png" alt="icone nbtech"></a>
                 </div>
                 <div class="boule-ico">
-                    <img src="ressources/segula.png" alt="icone segula">
+                    <a href="https://www.segulatechnologies.com/fr/" target="_blank"><img src="ressources/segula.png" alt="icone segula"></a>
                 </div>
                 <div class="boule-ico">
-                    <img src="ressources/fev.ico" alt="icone Fav/d2T">
+                   <a href="https://www.fev.com/" target="_blank"> <img src="ressources/fev.ico" alt="icone Fav/d2T"></a>
                 </div>
                 <div class="boule-ico">
-                    <img src="ressources/plane.svg" alt="icone avion">
+                    <a href="#"><img src="ressources/plane.svg" alt="icone avion"></a>
                 </div>
             </div>
             
