Remplacement icone bas de la section expérience

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                    <a href="https://www.fev.com/" target="_blank"> <img src="ressources/fev.ico" alt="icone Fav/d2T"></a>
                 </div>
                 <div class="boule-ico">
-                    <a href="#"><img src="ressources/plane.svg" alt="icone avion"></a>
+                    <a href="#"><img src="ressources/arrow_top.png" alt="icone avion"></a>
                 </div>
             </div>
             
