--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                         </li>
                         <li class="item-liste i3">
                             <span class="chiffre-style">3.</span>
-                            <p class="txt-liste">Gestion de projet</p>
+                            <p class="txt-liste">SEO</p>
                         </li>
                         <li class="item-liste i4">
                             <span class="chiffre-style">4.</span>
-                            <p class="txt-liste">SEO</p>
+                            <p class="txt-liste">Gestion de projet</p>
                         </li>
                         <li class="item-liste i5">
                             <span class="chiffre-style">5.</span>
@@ -218,8 +218,8 @@
         <div class="grille-skill">
 
             <div class="range-cont">
-                <p class="label-skill">JavaScript</p>
-                <p class="number-skill">60%</p>
+                <p class="label-skill">UI / UX</p>
+                <p class="number-skill">70%</p>
                 <div class="barre-skill b1"></div>
                 <div class="barre-grises"></div>
             </div>
@@ -230,27 +230,39 @@
                 <div class="barre-grises"></div>
             </div>
             <div class="range-cont">
-                <p class="label-skill">UI / UX</p>
-                <p class="number-skill">70%</p>
+                <p class="label-skill">HTML</p>
+                <p class="number-skill">90%</p>
                 <div class="barre-skill b3"></div>
                 <div class="barre-grises"></div>
             </div>
             <div class="range-cont">
-                <p class="label-skill">Symfony</p>
-                <p class="number-skill">60%</p>
+                <p class="label-skill">CSS</p>
+                <p class="number-skill">90%</p>
                 <div class="barre-skill b4"></div>
+                <div class="barre-grises"></div>
+            </div>
+            <div class="range-cont">
+                <p class="label-skill">JavaScript</p>
+                <p class="number-skill">60%</p>
+                <div class="barre-skill b5"></div>
+                <div class="barre-grises"></div>
+            </div>
+            <div class="range-cont">
+                <p class="label-skill">Symfony</p>
+                <p class="number-skill">75%</p>
+                <div class="barre-skill b6"></div>
                 <div class="barre-grises"></div>
             </div>
             <div class="range-cont">
                 <p class="label-skill">Gestion projet</p>
                 <p class="number-skill">70%</p>
-                <div class="barre-skill b5"></div>
+                <div class="barre-skill b7"></div>
                 <div class="barre-grises"></div>
             </div>
             <div class="range-cont">
                 <p class="label-skill">PHP</p>
-                <p class="number-skill">60%</p>
-                <div class="barre-skill b6"></div>
+                <p class="number-skill">75%</p>
+                <div class="barre-skill b8"></div>
                 <div class="barre-grises"></div>
             </div>
 
